--- a/src/output.css
+++ b/src/output.css
@@ -430,8 +430,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow-colored: 0 0 #0000;
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
+.pointer-events-auto {
+  pointer-events: auto;
+}
+
 .absolute {
   position: absolute;
+}
+
+.relative {
+  position: relative;
 }
 
 .inset-2\/4 {
@@ -441,8 +453,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: 50%;
 }
 
-.ml-32 {
-  margin-left: 8rem;
+.bottom-\[10px\] {
+  bottom: 10px;
 }
 
 .box-border {
@@ -453,32 +465,105 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: flex;
 }
 
-.h-screen {
+.h-\[100vh\] {
   height: 100vh;
 }
 
-.h-20 {
-  height: 5rem;
+.h-\[76px\] {
+  height: 76px;
 }
 
-.w-12 {
-  width: 3rem;
+.h-\[2px\] {
+  height: 2px;
 }
 
-.w-64 {
-  width: 16rem;
+.h-\[6px\] {
+  height: 6px;
 }
 
-.w-36 {
-  width: 9rem;
+.h-\[36px\] {
+  height: 36px;
 }
 
-.w-14 {
-  width: 3.5rem;
+.h-\[60px\] {
+  height: 60px;
+}
+
+.h-\[30px\] {
+  height: 30px;
+}
+
+.h-\[14px\] {
+  height: 14px;
+}
+
+.h-\[12px\] {
+  height: 12px;
+}
+
+.w-\[100vh\] {
+  width: 100vh;
+}
+
+.w-\[338px\] {
+  width: 338px;
+}
+
+.w-\[140px\] {
+  width: 140px;
+}
+
+.w-\[6px\] {
+  width: 6px;
+}
+
+.w-\[286px\] {
+  width: 286px;
+}
+
+.w-\[62px\] {
+  width: 62px;
+}
+
+.w-\[30px\] {
+  width: 30px;
+}
+
+.w-\[14px\] {
+  width: 14px;
+}
+
+.w-\[12px\] {
+  width: 12px;
+}
+
+.shrink-0 {
+  flex-shrink: 0;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.cursor-default {
+  cursor: default;
+}
+
+.appearance-none {
+  -webkit-appearance: none;
+          appearance: none;
 }
 
 .flex-row {
   flex-direction: row;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.flex-nowrap {
+  flex-wrap: nowrap;
 }
 
 .items-center {
@@ -489,12 +574,28 @@ Ensure the default browser behavior of the `hidden` attribute.
   justify-content: center;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
+.justify-between {
+  justify-content: space-between;
+}
+
+.justify-evenly {
+  justify-content: space-evenly;
+}
+
+.rounded-\[3px\] {
+  border-radius: 3px;
 }
 
 .rounded-2xl {
   border-radius: 1rem;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-\[8px\] {
+  border-radius: 8px;
 }
 
 .border {
@@ -510,17 +611,34 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-0 {
+  --tw-bg-opacity: 0;
+}
+
+.fill-\[\#171717\] {
+  fill: #171717;
+}
+
+.fill-\[\#A3A3A3\] {
+  fill: #A3A3A3;
+}
+
 .text-center {
   text-align: center;
 }
 
-.font-sans {
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+.font-\[\'Inter\'\] {
+  font-family: 'Inter';
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .shadow-\[0_0_10px_rgba\(0\2c 0\2c 0\2c 0\.1\)\] {
@@ -529,7 +647,70 @@ Ensure the default browser behavior of the `hidden` attribute.
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.hover\:bg-blue-300:hover {
+.shadow-\[0_2px_4px_rgba\(57\2c 61\2c 69\2c 0\.06\)\] {
+  --tw-shadow: 0 2px 4px rgba(57,61,69,0.06);
+  --tw-shadow-colored: 0 2px 4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.dark .dark\:pointer-events-none {
+  pointer-events: none;
+}
+
+.dark .dark\:pointer-events-auto {
+  pointer-events: auto;
+}
+
+.dark .dark\:cursor-pointer {
+  cursor: pointer;
+}
+
+.dark .dark\:cursor-default {
+  cursor: default;
+}
+
+.dark .dark\:border {
+  border-width: 1px;
+}
+
+.dark .dark\:border-solid {
+  border-style: solid;
+}
+
+.dark .dark\:border-none {
+  border-style: none;
+}
+
+.dark .dark\:border-\[\#A3A3A3\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(163 163 163 / var(--tw-border-opacity));
+}
+
+.dark .dark\:border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.dark .dark\:bg-\[\#171717\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+  background-color: rgb(23 23 23 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#262626\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(38 38 38 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#A3A3A3\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(163 163 163 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:fill-\[\#F4F4F5\] {
+  fill: #F4F4F5;
+}
+
+.dark .dark\:text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
